--- a/BGI/Template/Agent/home.html
+++ b/BGI/Template/Agent/home.html
@@ -11,8 +11,11 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Agent Page</h1>
+    <div class="contianer">
+      <h1>Agent Dashborad Page</h1>
 
+    </div>
+    
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
