--- a/BGI/Template/Company/home.html
+++ b/BGI/Template/Company/home.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Agent Page</h1>
+    <h1>BGI Dashborad Page</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
