--- a/BGI/Template/Registration/index.html
+++ b/BGI/Template/Registration/index.html
@@ -30,25 +30,26 @@
 
                     <div class="signin-form  shadow-lg p-3 mb-5 bg-body rounded">
                         <h2 class="form-title">Log In</h2>
-                        <form method="POST" class="register-form" id="login-form">
+                        <form method="POST" action="{% url 'login_btn' %}" class="register-form" id="login-form">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="your_name" id="your_name" placeholder="Your Name"/>
+                                <input type="text" name="name" id="name" placeholder="Your Name"/>
                             </div>
                             <div class="form-group">
-                                <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Password"/>
+                                <label for="password"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="password" id="password" placeholder="Your Password"/>
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
                                 <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                             </div>
                             <div class="form-group form-button">
-                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                                <input type="submit" name="signin" id="signin" class="form-submit" value="Login"/>
                             </div>    
                         </form>
                         <div class="text-dark">
-                          <a href="registet.html" class="btn text-dark">Registet here</a>
+                          <a href="{% url 'register' %}" class="btn text-dark">Registet here</a>
                         </div>
                        
               
