--- a/BGI/Template/Registration/register.html
+++ b/BGI/Template/Registration/register.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="signup-image">
                         <figure><img src="{% static 'images/login.jpg' %}" alt="sing up image"></figure>
-                        <a href="index.html" class="signup-image-link">I am already registered</a>
+                        <a href="{% url 'login' %}" class="signup-image-link">I am already registered</a>
                     </div>
                 </div>
             </div>
